# Pinball-Remake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Defs.cpp  Defs.h  Game.cpp  Game.h  Interface.cpp  Interface.h  README.md  main.cpp
GameObjects/: Ball.cpp  Ball.h  Collidable.h  Drawable.h  Flipper.cpp  Flipper.h  GameManager.cpp  GameManager.h  GameObject.h
GameObjects/Obstacles/: Bullseye.cpp  Bullseye.h  Bumper.cpp  Bumper.h  Collectable.cpp  Collectable.h  Gate.cpp  Gate.h  Kicker.cpp  Kicker.h  Lane.cpp  Lane.h  Magnet.cpp  Magnet.h  Obstacle.h  PopBumper.cpp  PopBumper.h  Portal.cpp  Portal.h  Ramp.cpp  Ramp.h  ScoreMultiplier.cpp  ScoreMultiplier.h  SpeedBooster.cpp  SpeedBooster.h  SpriteWalls.cpp  SpriteWalls.h  Switch.cpp  Switch.h  ThrustBumper.cpp  ThrustBumper.h  VibraniumBumper.cpp  VibraniumBumper.h  Wall.cpp  Wall.h
GameObjects/Particles/: HitFX.h  Particle.cpp  Particle.h  ParticleEffect.cpp  ParticleEffect.h  ParticleEffectsManager.h
UI/: AllUIIncludes.h  Button.cpp  Button.h  EventReceiver.h  EventSource.h  MainMenuUI.cpp  MainMenuUI.h  Text.cpp  Text.h  UIElement.h  UIManager.cpp  UIManager.h
Utility/: AudioManager.cpp  AudioManager.h  CollisionDetection.cpp  CollisionDetection.h  Configurable.cpp  Configurable.h  Factory.h  PixelPerfectCollision.cpp  PixelPerfectCollision.h  PostProcessing.cpp  PostProcessing.h
